# ofxMotionMachine

./: .gitignore  README.md  addon_config.mk
apps/examples/ExampleData/: LShoulderFlexExt.c3d  animation.bvh  taichi.v3d
apps/examples/mmEmptyExample/: Project.xcconfig  Release.xcconfig  Shared.xcconfig  config.make  mmEmptyExample.sln  mmEmptyExample.vcxproj  mmEmptyExample.vcxproj.filters
apps/examples/mmTutorial_1/: Makefile  mmTutorial_1.vcxproj
libs/compiled/project/linux/: .gitignore  CMakeLists.txt  README.md
libs/compiled/project/linux/ofxMoMa/: addon_config.mk
libs/generator/: generate_osx.sh  generate_unix.sh  generate_win.bat
mmAddons/ofxMoMaVr/: addon_config.mk
mmEmptyExample/: mmEmptyExample.sln  mmEmptyExample.vcxproj  mmEmptyExample.vcxproj.filters
mmExample/sandbox/: README.md
mmExampleData/: LShoulderFlexExt.lab  Test.kin
mmTutorial_1_DataTypes/: addons.make  mmTutorial_1_DataTypes.qbs  mmTutorial_1_DataTypes.sln  mmTutorial_1_DataTypes.vcxproj  mmTutorial_1_DataTypes.vcxproj.filters
mmTutorial_1_DataTypes/mmTutorial_1_DataTypes.xcodeproj/: project.pbxproj
mmTutorial_1_DataTypes/src/: main.cpp  ofApp.cpp
mmTutorial_2_DataManipulation_Features_Display/: mmTutorial_2_DataManipulation_Features_Display.sln  mmTutorial_2_DataManipulation_Features_Display.vcxproj
mmTutorial_2_DataManipulation_Features_Display/mmTutorial_2_DataManipulation_Features_Display.xcodeproj/: project.pbxproj
mmTutorial_2_DataManipulation_Features_Display/src/: ofApp.cpp
mmTutorial_3_TinyExample/: mmTutorial_3_TinyExample.sln  mmTutorial_3_TinyExample.vcxproj
mmTutorial_3_TinyExample/mmTutorial_3_TinyExample.xcodeproj/: project.pbxproj
mmTutorial_4_Annotation/: addons.make  mmTutorial_4_Annotation.qbs  mmTutorial_4_Annotation.sln  mmTutorial_4_Annotation.vcxproj  mmTutorial_4_Annotation.vcxproj.filters
mmTutorial_4_Annotation/mmTutorial_4_Annotation.xcodeproj/: project.pbxproj
mmTutorial_4_Annotation/src/: ofApp.cpp  ofApp.h
projectGenerator-osx-MoMa/: ._LICENSE
resources/: SynoList.txt  kinect2.bones  v3d.bones
src/archiver/: mmHDF5Archiver.cpp  mmHDF5Archiver.h  mmSqlArchiver.cpp  mmSqlArchiver.h
src/core/: mmArmaUtils.cpp  mmBone.h  mmBoneList.h  mmBoneTrace.cpp  mmContainer.cpp  mmContainer.h  mmFrame.cpp  mmFrame.h  mmLabelList.h  mmMoment.cpp  mmMoment.h  mmMutatedBoneList.cpp  mmNode.cpp  mmNode.h  mmNodeList.cpp  mmNodeList.h  mmQuaternion.cpp  mmSkeleton.cpp  mmSynoList.h  mmTrack.cpp  mmTrack.h  mmUtils.cpp  mmUtils.h  mmXmlArchiver.cpp  mmXmlArchiver.h
src/parsers/: BvhParser.cpp  mmC3dParser.h  mmFaceCsvParser.h  mmFaceTxtParser.cpp  mmFlatParser.cpp  mmFlatParser.h  mmKinParser.cpp  mmParser.cpp  mmParser.h  mmTsvParser.cpp  mmTsvParser.h  mmV3dParser.h  mmXmlParser.h
template/: config.make  template.config
(+298 files in other folders)
